mainsite/static/mainsite/custom.css
.btn-success{color:#fff;background-color:#22b5da;border-color:#22b5da;color:#ffffff;font-weight:bold}

.btn-success:hover,.btn-success:focus,.btn-success:active,.btn-success.active,.open .dropdown-toggle.btn-success{color:#fff;background-color:#18829D;border-color:#18829D}

.btn-done{color:#fff;background-color:#33D685;border-color:#33D685;color:#ffffff;font-weight:bold; cursor: default;}

.btn-done:hover,.btn-done:focus,.btn-done:active,.btn-done.active,.open .dropdown-toggle.btn-done{color:#fff;background-color:#33D685;border-color:#33D685; cursor: default;}

.green { color: #33D685;}

.row-btm{margin-right:-15px;margin-left:-15px;margin-top:30px}

.jumbotron{padding:5px;margin-top:50px;font-size:21px;font-weight:200;line-height:2.1428571435;color:#4D4D4D;background-color:#4D4D4D}

.navbarbuffer{margin-top:50px;color:inherit;background-color:inherit}

.navbarbufferextra{margin-top:60px;color:inherit;background-color:inherit}

.navbar-brand{float:left;padding:15px 25px;font-size:18px;line-height:20px}

.navbar-brand-image{float:left;padding:10px 25px;font-size:18px;line-height:20px}

.navbar{max-height:50px;}

.navbar-brand-icon{float:left;padding:5px 2px;line-height:20px}

a.iconnavbuttons:hover { color: #7AD3E9; text-decoration:none; }

.examplePost{background-color:#CCCCDD}

.errorlist{
    list-style-type: none;
    padding: 0px 0px;
    margin: 1px 0;
}

.callout {
    position: relative;
    margin: 10px 0px;
    padding: 5px 5px;
    border-width:3px;
    border-style:solid;
    border-color:#22b5da;
    background-color: #E7E7EF;
    /* easy rounded corners for modern browsers */
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
}

pre.commentinside {
    border-color:  #F5F5F8;
    background-color: #F5F5F8;
    overflow: hidden;
}

.commentcallout {
    position: relative;
    margin: 0px 0px;
    padding: 5px 5px;
    border-width:3px;
    border-style:solid;
    border-color:#22b5da;
    background-color: #F5F5F8;
    /* easy rounded corners for modern browsers */
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
}

.errorcallout {
    position: relative;
    margin: 10px 0;
    padding: 5px 5px;
    background-color: #fff000;
    /* easy rounded corners for modern browsers */
    -moz-border-radius: 6px;
    -webkit-border-radius: 6px;
    border-radius: 6px;
}

.callout .sidenotch {
    position: absolute;
    top: 5px;
    left: -20px;
    margin: 0;
    border-top: 10px solid transparent;
    border-left: 10px solid transparent;
    border-right: 10px solid #22b5da;
    border-bottom: 10px solid transparent;
    padding: 0;
    width: 0;
    height: 0;
    /* ie6 height fix */
    font-size: 0;
    line-height: 0;
     /* ie6 transparent fix */
    _border-right-color: pink;
    _border-left-color: pink;
    _filter: chroma(color=pink);
}

.commentcallout .sidenotch {
    position: absolute;
    top: 5px;
    left: -20px;
    margin: 0;
    border-top: 10px solid transparent;
    border-left: 10px solid transparent;
    border-right: 10px solid #22b5da;
    border-bottom: 10px solid transparent;
    padding: 0;
    width: 0;
    height: 0;
    /* ie6 height fix */
    font-size: 0;
    line-height: 0;
     /* ie6 transparent fix */
    _border-right-color: pink;
    _border-left-color: pink;
    _filter: chroma(color=pink);
}

.errorcallout .btmnotch {
    position: absolute;
    top: 40px;
    left: 20px;
    margin: 0;
    border-top: 10px solid #fff000;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #transparent;
    padding: 0;
    width: 0;
    height: 0;
    /* ie6 height fix */
    font-size: 0;
    line-height: 0;
     /* ie6 transparent fix */
    _border-right-color: pink;
    _border-left-color: pink;
    _filter: chroma(color=pink);
}

.errorcallout .topnotch {
    position: absolute;
    top: -10px;
    left: 20px;
    margin: 0;
    border-top: 0;
    border-left: 10px solid transparent;
    border-right: 10px solid transparent;
    border-bottom: 10px solid #fff000;
    padding: 0;
    width: 0;
    height: 0;
    /* ie6 height fix */
    font-size: 0;
    line-height: 0;
     /* ie6 transparent fix */
    _border-right-color: pink;
    _border-left-color: pink;
    _filter: chroma(color=pink);
}

.wordwrap {   
   word-wrap: break-word;  
}

.blueBorderHeader {
    position: absolute;
    left: 10px;
    top: 5px;
    font-size: 18px;
    font-weight: 600;
}

.blueBorder{
    padding: 20px 40px 15px 30px;
    border-width:3px;
    border-style:solid;
    border-color:#22b5da;
    background-color: #F5F5F8;
}

.blueBorderPost{
    padding: 20px 40px 20px 40px;
    border-width:3px;
    border-style:solid;
    border-color:#22b5da;
    background-color: #F5F5F8;
}

.comment {
    border-width:2px;
    border-color:#B9B9BF;
    border-style:solid;
    padding: 5px 5px 5px 5px;
    background-color: #F9F9FB;
}

.commentShell {
    padding: 10px 0px 0px 0px;
}

p.countInformation {
    position: absolute;
    right: 25px;
    bottom: 2px;
    font-size: 8pt;
    
}

.wordwrap {     
   word-wrap: break-word;      /* IE */
}

.manageFavorites {
    padding: 5px 5px;
}

.commentDeleteIcon {
    position: absolute;
    right: 25px;    
}

.favDeleteIcon {

}

.cornerIcon {
    position: absolute;
    right: 5px;
    top: 2px;
}

.BR5 {
    padding: 5px 5px;
}

.smallBR {
    padding: 10px 10px;
}

.meduimBR {
    padding: 15px 15px;
}

.iconLink {
    color: #B9B9BF;
    cursor: pointer;
}

i.iconLink:hover {
    color: #000000;
}

font.settingsHeading {
    font-weight: bold;
    font-size: 16pt;
    color: #000000;
}

font.settingsField {
    font-weight: bold;
    font-size: 11pt;
    color: #428BCA;
}

font.commentTypename {
    font-size: 9pt;
    font-style: italic;
    font-weight: bold;
}

font.username {
    font-weight: bold;
    font-size: 11pt;
    color: #428BCA;
}

font.PostTitle {
    font-weight: bold;
    font-size: 20pt;
    color: #22b5da;
}

font.PostTitle-md {
    font-weight: bold;
    font-size: 15pt;
    color: #22b5da;
}

font.PageTitle {
    font-weight: bold;
    font-size: 30pt;
    color: #000000;
}


button.right {
    float: right;
}

label.checkbox {
    font-size: 8pt;
 }

.alignLeft {
    /*position: absolute;
    bottom: -5px;
    left: 5px;*/
    float: left;
    float: bottom;
    width: 50%;
}

.alignRight {
    position: absolute;
    bottom: 5px;
    right: 5px;
    /*
    float: right;
    float: bottom;
    width: 50%;
    text-align: right;*/
}

a.clickableDiv:link ,a.clickableDiv:visited ,a.clickableDiv:hover ,a.clickableDiv:active {color:#000000;text-decoration:none;} 

a.TitleLink:link ,a.TitleLink:visited ,a.TitleLink:hover ,a.TitleLink:active {text-decoration:none;}  

html,
body {
   margin:0;
   padding:0;
   height:100%;
}

footer {
   position:absolute;
   bottom:0;
   height:2px;   /* Height of the footer */
}

img.imagecontainer-large  {
   max-width: 95%;
   max-height: 75%;
   display:block;
   margin:auto;
   padding: 0px 0px 15px 0px;
}

img.imagecontainer-small {
   max-width: 50%;
   max-height: 40%;
   display:inline;
   margin:auto;
   padding: 0px 7px 0px 0px;
}


.radiolist {
	margin: 0 10px 0 10px;
}

